pks-nsxt/Contour/tea.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-tea
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: tea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
spec:
  selector:
    matchLabels:
      app: tea
  replicas: 2
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: harbor.corp.tanzu/library/http-echo
        args:
        - "-text=it’s always tea time"
        ports:
        - containerPort: 5678
